fixing details page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -84,13 +84,13 @@
 
  @media screen {
   .navbar{
-    margin: 50px 50px 0px;
+    margin: 20px 35px 0px;
     position: static;
     font-size: 20px;
   }
 
   .tittle{
-    margin: 30px 0px 10px 70px;
+    margin: 50px 0px 10px 20px;
     font-size: 13px;
   }
 
@@ -103,7 +103,7 @@
 
   .title {
     margin-top: 0px;
-    margin-left: 10px;
+    margin-left: 0px;
     font-size: 18px;
   }
 
